--- a/WhatsApp/package.json
+++ b/WhatsApp/package.json
@@ -37,7 +37,9 @@
     "react-navigation-header-buttons": "^11.1.1",
     "react-redux": "^8.1.3",
     "uuid": "^9.0.1",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "expo-notifications": "~0.20.1",
+    "expo-device": "~5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
